@@ -1,3 +1,11 @@
+2005-10-24  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* gnomecc-canvas.c: calculate item widths instead of forcing them to
+	be MAX_ITEM_WIDTH, wrap labels with PANGO_WRAP_WORD, this closes
+	#319492. force canvas background to base[GTK_STATE_NORMAL], do not 
+	repaint canvas background, this way it feels quite quicker when
+	resizing the window.
+
 2005-10-19  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* control-center.c: set the adjustments, so the GtkScrollBar arrows
